--- a/GunStore/Web.config
+++ b/GunStore/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Files\School\webApplications\CBS3\comicBookStore\GunStore\App_Data\Database1.mdf;Integrated Security=True"
+    connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
     providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GunStore-20161007010347.mdf;Initial Catalog=aspnet-GunStore-20161007010347;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
