--- a/GunStore/Views/Web.config
+++ b/GunStore/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="GunStore" />
+        <add namespace="ComicBookStore" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
